   "display inline element" respectively
 - Vorple Core: Changed the "say (content) in an (elem) element" phrase to
   "say (content) in an element (elem)", in line with the other phrases
   

Libraries
---------

 - Updated Parchment, should work with IE8 now
 - Replaced jPlayer with SoundManager 2
 - Updated jQuery to 1.8.3
 - Updated Noty
 - The build script now creates single files with all JavaScript in them
   for easier inclusion to HTML

   
Modules
-------

 - Media: Updated to work with SoundManager instead of jPlayer
 - Media: Added stopSound()
 - Media: Music now fades out when stopped or another song is played, and
   all functions that stop sounds can fade out instead
 - Parser: Character input support



Release 2.4 (2012-09-29)
========================

Support for Parchment (Z-machine) and Inform 7.

Modules
-------

 - Cookie: Added vorple.cookie.list()
 - Core: changed the initialization event from "vorpleInit" to "init.vorple",
   in preparation of namespaced parser events
 - Core: Made vorple.core.engine() return the engine that's used to initialize
   Vorple, not the engine that is otherwise available
 - Core: Removed the clickLink() method, replaced by vorple.undum.doClick() 
   and vorple.undum.doLink()
 - Html: Fixed a bug where vorple.html.url() would not return correct values
   when no filename was given
 - Media: Changed the default YouTube video width from 640 pixels to 600 pixels
   so that the videos fit in the new Parchment version layout
 - Parser: Added the module and Parchment/Inform 7 support
 - Undum: Added doClick() and doLink() that expose undum.doClick()
   and undum.doLink()


Libraries
---------

 - Updated the Noty library
    
   
Tests
-----

 - Restructured the tests so that they can be run at the same time
 - Updated QUnit to the latest version



Release 1.3 (2012-04-26)
========================

Documentation
-------------

 - Added a fallback to local jQuery UI library if the CDN fails